Move config button to avoid scrollbar

--- a/src/client/src/containers/MainPage.css
+++ b/src/client/src/containers/MainPage.css
@@ -1,6 +1,6 @@
 .config-button {
     position: absolute;
     top: 10px;
-    left: 440px;
+    left: 452px;
     z-index:99999;
 } 
